<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_colleges"
            android:icon="@drawable/baseline_college_24"
            android:title="@string/menu_colleges" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/baseline_hotel_24"
            android:title="@string/menu_hotels" />

        <item
            android:id="@+id/nav_malls"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/menu_malls" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/baseline_place_24"
            android:title="@string/menu_places" />
        <item
            android:id="@+id/nav_forts"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_forts" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>