<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_about_pune"
        android:orderInCategory="100"
        android:title="@string/menu_about_pune"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share_app"
        android:orderInCategory="100"
        android:title="@string/menu_share_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_contactus"
        android:orderInCategory="100"
        android:title="@string/menu_contactus"
        android:icon="@drawable/baseline_call_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:title="@string/menu_exit"
        app:showAsAction="never" />
</menu>